--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
+    
+    <nav>
+      <ul>
+        <li>
+          <a href="./1-timer.html">Timer</a>
+        </li>
+        <li>
+          <a href="./2-snackbar.html">Snackbar</a>
+        </li>
+      </ul>
+    </nav>
 
     <script type="module" src="./main.js"></script>
   </body>
