--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -11,13 +11,13 @@
   </head>
   <body>
 
-      <section>
-        <a href="./index.html">Go to home</a>
-        <h1>Welcome to Timer</h1>
+      <section class="section-timer">
+        <a class="home-timer" href="./index.html">Go to home</a>
+        <h1 class="title-timer">Welcome t<span class="greeting-timer">o Timer</span></h1>
       </section>
 
-      <input type="text" id="datetime-picker" />
-      <button type="button" data-start disabled>Start</button>
+      <input class="input-timer" type="text" id="datetime-picker" />
+      <button class="btn-timer" type="button" data-start disabled>Start</button>
       
       <div class="timer">
         <div class="field">
