--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -10,9 +10,9 @@
   </head>
   <body>
 
-      <section>
-        <a class="home" href="./index.html">Go to home</a>
-        <h1 class="title">Welcome t<span class="greeting">o Snackbar</span></h1>
+      <section class="section-snackbar">
+        <a class="home-snackbar" href="./index.html">Go to home</a>
+        <h1 class="title-snackbar">Welcome t<span class="greeting-snackbar">o Snackbar</span></h1>
       </section>
 
       <form class="form">
